--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.35.0
-tensorflow==2.12.0
+tensorflow-cpu==2.12.0
 numpy
 pillow
-streamlit-drawable-canvas
+streamlit-drawable-canvas==0.8.0
